--- a/jborean93/windows2022-addc/Vagrantfile
+++ b/jborean93/windows2022-addc/Vagrantfile
@@ -5,15 +5,15 @@ Vagrant.configure("2") do |config|
   config.vm.box = "jborean93/WindowsServer2022"
   config.vm.provision "shell", 
     name: "Active Directory Domain Controller Setup",
-    path: "./scripts/powershell/createdomaincontroller.ps1"
-    # reboot: "true"
-  config.vm.provision "shell", 
+    path: "./scripts/powershell/createdomaincontroller.ps1",
+    reboot: "true"
+  config.vm.provision "shell",
     name: "Create Active Directory Security Groups",
     path: "./scripts/powershell/createsecuritygroups.ps1"
-  config.vm.provision "shell", 
+  config.vm.provision "shell",
     name: "Create Active Directory Domain Users",
-    path: "./scripts/powershell/createdomainusers.ps1"  
-  config.vm.provision "shell", 
+    path: "./scripts/powershell/createdomainusers.ps1"
+  config.vm.provision "shell",
     name: "Allocate Users to Security Groups",
     path: "./scripts/powershell/allocategroupmembership.ps1"
 end
