--- a/two-nodes/windowsx1-fedorax1/Vagrantfile
+++ b/two-nodes/windowsx1-fedorax1/Vagrantfile
@@ -7,6 +7,10 @@ Vagrant.configure("2") do |config|
     win01.vm.box = "jborean93/WindowsServer2022"
     win01.vm.hostname = "win01"
     win01.vm.network "private_network", ip: "10.0.0.10"
+    win01.vm.provision "shell", name: "Disable IPv6 | Allow ICMP", inline: <<-SHELL
+      Get-NetAdapter | foreach { Disable-NetAdapterBinding -Name $_.Name -ComponentID "ms_tcpip6" -Confirm:$false }
+      Get-NetFirewallrule -DisplayName "Core Networking Diagnostics - ICMP Echo Request (ICMPv4-In)" | Where-Object -Property Profile -Contains -Value "Private, Public" | Enable-NetFirewallRule 
+    SHELL
     win01.vm.provision "shell", 
       name: "Active Directory Domain Controller Setup",
       path: "./scripts/powershell/createdomaincontroller.ps1",
@@ -19,13 +23,20 @@ Vagrant.configure("2") do |config|
       path: "./scripts/powershell/createdomainusers.ps1"
     win01.vm.provision "shell",
       name: "Allocate Users to Security Groups",
-      path: "./scripts/powershell/allocategroupmembership.ps1"  
+      path: "./scripts/powershell/allocategroupmembership.ps1"
   end
 
   config.vm.define :lnx01 do |lnx01|
     lnx01.vm.box = "fedora/41-cloud-base"
     lnx01.vm.hostname = "lnx01"
     lnx01.vm.network "private_network", ip: "10.0.0.20"
+    lnx01.vm.provision "shell", inline: <<-SHELL
+      dnf -yq install nss-mdns avahi-tools
+      systemctl enable --now avahi-daemon.service
+      sysctl -w net.ipv6.conf.all.disable_ipv6=1 >> /etc/sysctl.conf
+      sysctl -w net.ipv6.conf.default.disable_ipv6=1 >> /etc/sysctl.conf
+      # sysctl -p
+    SHELL
   end
 
 end
